chore: Update control names in HTML templates and structure form to send params

--- a/src/app/components/molecules/datos-contables-fiscales/datos-contables-fiscales.component.html
+++ b/src/app/components/molecules/datos-contables-fiscales/datos-contables-fiscales.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <app-text-input 
     [label]="'Correo Electrónico de contador o persona a cargo de temas contables(si aplica) y si es diferente al del contratista'"
-    [control]="getControl('accountant_email')"
+    [control]="getControl('accounting_responsible_email')"
     class="col-10"
   />
   <app-checkbox-input
