--- a/src/app/components/molecules/datos-contratista/datos-contratista.component.html
+++ b/src/app/components/molecules/datos-contratista/datos-contratista.component.html
@@ -8,7 +8,7 @@
   />
   <app-select-input
     [label]="'Tipos de documento'"
-    [control]="getControl('document_type')"
+    [control]="getControl('document_type_id')"
     class="col-4"
   />
   <app-text-input
@@ -29,7 +29,7 @@
   />
   <app-text-input
     [label]="'Actividad económica principal'"
-    [control]="getControl('economic_activity')"
+    [control]="getControl('economic_activity_id')"
     class="col-7"
   />
   <app-text-input
