--- a/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
+++ b/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
@@ -2,17 +2,17 @@
 <div class="row">
   <app-text-input 
     [label]="'Nombres y Apellidos'"
-    [control]="getControl('form_name')"
+    [control]="getControl('form_responsible_name')"
     class="col-4" 
   />
   <app-text-input 
     [label]="'Número de documento'"
-    [control]="getControl('form_document')"
+    [control]="getControl('form_responsible_document')"
     class="col-4" 
   />
   <app-text-input 
     [label]="'Cargo'"
-    [control]="getControl('form_position')"
+    [control]="getControl('form_responsible_position')"
     class="col-4" 
   />
 </div>
