--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -11,7 +11,7 @@
   <app-declaracion-sagrilaft />
   <app-acuerdo-confidencialidad [form]="naturalForm"/>
   <app-autorizacion-datos-personales />
-  <app-firma />
+  <app-firma [form]="naturalForm" />
   <div class="row">
     <app-black-button
         [name]="'enviar formulario'"
