--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,7 +14,7 @@
                     />
                 }
                 @case ('token') {
-                    <p class="align-center">Hemos enviado el token de seguridad a {{ crewCastEmailSecret }}. Por favor ingresa este token para continuar</p>
+                    <p class="align-center">Hemos enviado el token de seguridad a {{ vendorEmailSecret }}. Por favor ingresa este token para continuar</p>
                     <div class="bottom-gap">
                       <app-input-token
                         #tokenInput="ngModel"
@@ -29,7 +29,7 @@
                     <span class="lgl-content">Haz <a (click)="generateToken(); view = 'new-token'">clic acá</a> para generar un nuevo token</span>
                 }
                 @case ('new-token') {
-                    <p class="align-center">Hemos enviado el token de seguridad a {{ crewCastEmailSecret }}. Por favor ingresa este token para continuar</p>
+                    <p class="align-center">Hemos enviado el token de seguridad a {{ vendorEmailSecret }}. Por favor ingresa este token para continuar</p>
                     <app-black-button
                       [name]="'Continuar'"
                       (onClick)="setView('token')"
