chore: Update control names in HTML templates and structure form to send params

--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -1,3 +1,4 @@
+<app-panel-buttons (saveForm)="saveForm()"/>
 <form [formGroup]="juridicaForm" (ngSubmit)="sendForm()">
   <app-initial-data [form]="juridicaForm" />    
   <app-datos-empresa [form]="juridicaForm" />
