--- a/src/app/pages/forms-cmo/forms-cmo.component.html
+++ b/src/app/pages/forms-cmo/forms-cmo.component.html
@@ -1,18 +1,17 @@
 <div class="form-page">
-	<app-panel-buttons />
 	<div class="form-content">
 			<app-form-header [title]="title"/>
-			@if (typePerson == personEnnum.Natural) {
+			@if (typePerson == personEnnum.Juridica) {
 				<p>
 					El presente documento deberá ser completado y suscrito por la persona natural que se vinculará a la sociedad CMO PRODUCCIONES S.A.S., CMO INTERNACIONAL S.A.S. y/o CMO STUDIOS S.A.S., o aquellas que deseen realizar una actualización de datos previamente registrados.
 				</p>
-				<app-vinculacion-natural class="full-width"/>
+				<app-vinculacion-natural class="full-width" (notify)="sendForm($event)" />
 			}
 			@else {
 				<p>
 					El presente documento deberá ser completado y suscrito por el representante legal de la persona jurídica que se vinculará a la sociedad CMO PRODUCCIONES S.A.S., CMO INTERNACIONAL S.A.S. y/o CMO STUDIOS S.A.S., o aquellas que deseen realizar una actualización de datos previamente registrados.
 				</p>
-				<app-vinculacion-juridica class="full-width"/>
+				<app-vinculacion-juridica class="full-width" (notify)="sendForm($event)" />
 			}
 				
 	</div>
