--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,35 @@
   box-sizing: border-box;
 }
 
+input[type="radio"]{
+  margin: 0;
+}
+
+input:is([type="text"],[type="date"],[type="password"],[type="email"],[type="number"]), select{
+  height: 25px;
+  width: 100%;
+  font-size: 12px;
+  border: 1px solid var(--font-color);
+  padding-left: 9px;
+  background-color: white;
+  text-transform: uppercase;
+}
+
+select {
+  appearance: none;
+  border-radius: 0;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+  padding-right: 24px;
+}
+
+.ng-submitted input.ng-invalid, .ng-submitted select.ng-invalid{
+  border-color: var(--alert-color) !important;
+  background-color: var(--alert-background) !important;
+}
+
 html {
 	scroll-behavior: smooth;
 }
@@ -166,7 +195,7 @@ p.lbl-eng {
 
 	select {
 		height: 30px;
-		background-color: #0000 ;
+		background-color: #0000;
 	}
 
 	textarea {
