--- a/src/app/components/molecules/firma/firma.component.html
+++ b/src/app/components/molecules/firma/firma.component.html
@@ -12,6 +12,7 @@
 <div class="row">
   <label class="col-12">Firma</label>
   <app-filebox 
+    [control]="getControl('signature')"
     class="col-4"
   />
 </div>
