--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -2,7 +2,7 @@
 <app-panel-buttons (saveForm)="saveForm()"/>
 <form [formGroup]="naturalForm" (ngSubmit)="sendForm()">
   <app-initial-data [form]="naturalForm" />
-  <app-datos-contratista [form]="naturalForm"/>
+  <app-datos-contratista [form]="naturalForm" [lists]="lists"/>
   <app-datos-contables-fiscales [form]="naturalForm"/>
   <app-datos-salud [form]="naturalForm"/>
   <app-datos-contacto-emergencia [form]="naturalForm"/>
