--- a/src/app/pages/forms-cmo/forms-cmo.component.html
+++ b/src/app/pages/forms-cmo/forms-cmo.component.html
@@ -1,11 +1,11 @@
 <div class="form-page">
 	<div class="form-content">
 			<app-form-header [title]="title"/>
-			@if (typePerson == personEnnum.Juridica) {
+			@if (typePerson == personEnnum.Natural) {
 				<p>
 					El presente documento deberá ser completado y suscrito por la persona natural que se vinculará a la sociedad CMO PRODUCCIONES S.A.S., CMO INTERNACIONAL S.A.S. y/o CMO STUDIOS S.A.S., o aquellas que deseen realizar una actualización de datos previamente registrados.
 				</p>
-				<app-vinculacion-natural class="full-width" (notify)="sendForm($event)" />
+				<app-vinculacion-natural class="full-width" (notify)="sendForm($event)" [lists]="lists" />
 			}
 			@else {
 				<p>
