feat:  Update code to receive and save form info

--- a/src/app/components/molecules/datos-financieros/datos-financieros.component.html
+++ b/src/app/components/molecules/datos-financieros/datos-financieros.component.html
@@ -6,10 +6,12 @@
   <app-text-input 
     [label]="'Último cierre contable'"
     [control]="getControl('last_close_assets')" 
+    [type]="'number'"
     class="col-4" />
   <app-text-input 
     [label]="'Año anterior'"
     [control]="getControl('last_year_assets')"
+    [type]="'number'"
     class="col-4" 
   />
 </div>
@@ -20,11 +22,13 @@
   <app-text-input 
     [label]="'Último cierre contable'"
     [control]="getControl('last_close_liabilities')"
+    [type]="'number'"
     class="col-4" 
   />
   <app-text-input 
     [label]="'Año anterior'"
     [control]="getControl('last_year_liabilities')"
+    [type]="'number'"
     class="col-4" 
   />
 </div>
@@ -34,12 +38,14 @@
   </p>
   <app-text-input 
     [label]="'Último cierre contable'"
-    [control]="getControl('last_close_equity')" 
+    [control]="getControl('last_close_equity')"
+    [type]="'number'"
     class="col-4" 
   />
   <app-text-input 
     [label]="'Año anterior'"
-    [control]="getControl('last_year_equity')" 
+    [control]="getControl('last_year_equity')"
+    [type]="'number'"
     class="col-4" 
   />
 </div>
@@ -50,11 +56,13 @@
   <app-text-input 
     [label]="'Último cierre contable'"
     [control]="getControl('last_close_income')"
+    [type]="'number'"
     class="col-4" 
   />
   <app-text-input 
     [label]="'Año anterior'"
-    [control]="getControl('last_year_income')" 
+    [control]="getControl('last_year_income')"
+    [type]="'number'"
     class="col-4" 
   />
 </div>
@@ -64,12 +72,14 @@
   </p>
   <app-text-input 
     [label]="'Último cierre contable'"
-    [control]="getControl('last_close_expenses')"
+    [control]="getControl('last_close_expense')"
+    [type]="'number'"
     class="col-4" 
   />
   <app-text-input 
     [label]="'Año anterior'"
-    [control]="getControl('last_year_expenses')" 
+    [control]="getControl('last_year_expenses')"
+    [type]="'number'"
     class="col-4"
   />
 </div>
