--- a/src/app/components/molecules/informacion-financiera/informacion-financiera.component.html
+++ b/src/app/components/molecules/informacion-financiera/informacion-financiera.component.html
@@ -25,7 +25,7 @@
   />
   <app-text-input 
     [label]="'Egresos'"
-    [control]="getControl('last_close_expenses')" 
+    [control]="getControl('last_close_expense')" 
     class="col-4" 
   />
 </div>
