--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -5,7 +5,7 @@
   <app-datos-representante-legal [form]="juridicaForm" />
   <app-datos-factura-electronica [form]="juridicaForm" />
   <app-datos-contabilidad [form]="juridicaForm" />
-  <app-datos-fiscales [form]="juridicaForm" />
+  <app-datos-fiscales [form]="juridicaForm" [lists]="lists" />
   <app-datos-tesoreria [form]="juridicaForm" />
   <app-datos-contacto-comercial [form]="juridicaForm" /> 
   <app-autorizacion-datos-personales />
