--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -4,7 +4,7 @@
   <app-initial-data [form]="naturalForm" />
   <app-datos-contratista [form]="naturalForm" [lists]="lists"/>
   <app-datos-contables-fiscales [form]="naturalForm"/>
-  <app-datos-salud [form]="naturalForm"/>
+  <app-datos-salud [form]="naturalForm" [lists]="this.lists"/>
   <app-datos-contacto-emergencia [form]="naturalForm"/>
   <app-personas-expuestas-politicamente [form]="naturalForm"/>
   @if(naturalForm.get('is_pep')?.value == '1'){
