feat: Add new enum for vendor form status and file types

--- a/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
+++ b/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
@@ -19,6 +19,7 @@
 <div class="row">
   <label class="col-12">Firma</label>
   <app-filebox 
+    [control]="getControl('signature')"
     class="col-4"
   />
 </div>
