--- a/src/app/pages/forms-cmo/forms-cmo.component.html
+++ b/src/app/pages/forms-cmo/forms-cmo.component.html
@@ -1,23 +1,26 @@
 @if (loading) {
   <div class="loader">
-      <div class="custom-loader"></div>
+    <div class="custom-loader"></div>
   </div>
 }
 <div class="form-page">
 	<div class="form-content">
 			<app-form-header [title]="title"/>
-			@if (typePerson == personEnnum.Natural) {
+			@if (typePerson == personEnnum.Natural && vendorStatus == VENDORSTATUS.CREADO) {
 				<p>
 					El presente documento deberá ser completado y suscrito por la persona natural que se vinculará a la sociedad CMO PRODUCCIONES S.A.S., CMO INTERNACIONAL S.A.S. y/o CMO STUDIOS S.A.S., o aquellas que deseen realizar una actualización de datos previamente registrados.
 				</p>
-				<app-vinculacion-natural class="full-width" (notify)="sendForm($event)" [lists]="lists" />
+				<app-vinculacion-natural class="full-width" (notify)="sendForm($event)" [lists]="lists" (onSubmitFile)="submitFile($event)" />
 			}
-			@else {
+			@else if (typePerson == personEnnum.Juridica && vendorStatus == VENDORSTATUS.CREADO) {
 				<p>
 					El presente documento deberá ser completado y suscrito por el representante legal de la persona jurídica que se vinculará a la sociedad CMO PRODUCCIONES S.A.S., CMO INTERNACIONAL S.A.S. y/o CMO STUDIOS S.A.S., o aquellas que deseen realizar una actualización de datos previamente registrados.
 				</p>
-				<app-vinculacion-juridica class="full-width" (notify)="sendForm($event)" [lists]="lists" />
+				<app-vinculacion-juridica class="full-width" (notify)="sendForm($event)" [lists]="lists" (onSubmitFile)="submitFile($event)" />
 			}
+      @else if(vendorStatus == VENDORSTATUS.VINCULACION) {
+        <app-documentation-form />
+      }
 				
 	</div>
 </div>
