--- a/src/app/components/molecules/firma/firma.component.html
+++ b/src/app/components/molecules/firma/firma.component.html
@@ -10,9 +10,9 @@
     class="col-4"></app-text-input>
 </div>
 <div class="row">
-  <label class="col-12">Firma</label>
+  <label class="col-12">Adjuntar imagen con su firma</label>
   <app-filebox 
     [control]="getControl('signature')"
-    class="col-4"
+    class="col-12"
   />
 </div>
