--- a/src/app/components/organisms/documentation-form/documentation-form.component.html
+++ b/src/app/components/organisms/documentation-form/documentation-form.component.html
@@ -6,10 +6,20 @@
                         A continuación podrá cargar todos los documentos requeridos para avanzar con su proceso de contratación, si no cuenta con la totalidad de los documentos en este momento puede ir subiendolos a medida que los tenga, dando siempre GUARDAR, antes de salir de esta pantalla. Para ingresar de nuevo y continuar con la carga de documentos debe ingresar el link enviado en el mail DYNAMO-TE DAMOS LA BIENVENIDA y generar de nuevo un token de seguridad. <b>Recuerde que su contratación no se podrá realizar hasta que haya subido la totalidad de los documentos</b>
                     </p>
                 </div>
-                @for (doc of documents; track doc.id) {
+                @for (doc of documents; track doc.id) {          
                   <p>
                       {{ doc.document_type }}
                   </p>
+                 @if(getErrorMessage(doc.id)) {
+                  <small class="error">
+                    {{ getErrorMessage(doc.id) }}
+                  </small>
+                 } @else if(doc.id == 329) {
+                  <p class="dscription">
+                    (<a href="https://drive.google.com/uc?id=18P7YuobJ-K-Xmw_H1EKf57qPNaxRUkOR&export=download">Descargar formato</a>)
+                  </p>
+                 }  
+                  
                   <app-filebox [formControlName]="'document_' + doc.id"></app-filebox>
                 }
             </div>
