--- a/src/app/pages/forms-cmo/forms-cmo.component.html
+++ b/src/app/pages/forms-cmo/forms-cmo.component.html
@@ -21,6 +21,9 @@
       @else if(vendorStatus == VENDORSTATUS.VINCULACION) {
         <app-documentation-form />
       }
+      @else {
+        <app-thanks />
+      }
 				
 	</div>
 </div>
