--- a/src/app/components/atoms/filebox/filebox.component.html
+++ b/src/app/components/atoms/filebox/filebox.component.html
@@ -1,4 +1,5 @@
 @if (!value) {
+  <small class="error">{{ getErrors() && getErrors()}}</small>
   <label
       class="content-file-input"
       appDragAndDropFile
