Update documentation form to download file from local assets

--- a/src/app/components/organisms/documentation-form/documentation-form.component.html
+++ b/src/app/components/organisms/documentation-form/documentation-form.component.html
@@ -16,7 +16,7 @@
                   </small>
                  } @else if(doc.id == 329) {
                   <p class="dscription">
-                    (<a href="https://drive.google.com/uc?id=18P7YuobJ-K-Xmw_H1EKf57qPNaxRUkOR&export=download">Descargar formato</a>)
+                    (<a href="assets/docs/carta-arl.docx" download>Descargar formato</a>)
                   </p>
                  }  
                   
