--- a/src/app/pages/forms-cmo/forms-cmo.component.html
+++ b/src/app/pages/forms-cmo/forms-cmo.component.html
@@ -21,7 +21,7 @@
       @else if(vendorStatus == VENDORSTATUS.VINCULACION) {
         <app-documentation-form />
       }
-      @else {
+      @else if(vendorStatus == VENDORSTATUS.VERIFICACION){
         <app-thanks />
       }
 				
