chore: Update datos-salud component

--- a/src/app/components/molecules/datos-salud/datos-salud.component.html
+++ b/src/app/components/molecules/datos-salud/datos-salud.component.html
@@ -24,6 +24,9 @@
     [optionName]="'name'"
     [optionValue]="'id'"
     class="col-4"></app-select-input>
+  <p class="col-2 align-end"> 
+    {{ getRiskPercentage() }} %
+  </p>
   <app-checkbox-input 
     [label]="'¿Sufre de alguna enfermedad?'"
     [controlName]="'illness'"
