--- a/src/app/components/organisms/documentation-form/documentation-form.component.html
+++ b/src/app/components/organisms/documentation-form/documentation-form.component.html
@@ -6,7 +6,7 @@
                         A continuación podrá cargar todos los documentos requeridos para avanzar con su proceso de contratación, si no cuenta con la totalidad de los documentos en este momento puede ir subiendolos a medida que los tenga, dando siempre GUARDAR, antes de salir de esta pantalla. Para ingresar de nuevo y continuar con la carga de documentos debe ingresar el link enviado en el mail DYNAMO-TE DAMOS LA BIENVENIDA y generar de nuevo un token de seguridad. <b>Recuerde que su contratación no se podrá realizar hasta que haya subido la totalidad de los documentos</b>
                     </p>
                 </div>
-                @for (doc of documents; track doc.id) {          
+                @for (doc of documents; track doc.id) {
                   <p>
                       {{ doc.document_type }}
                   </p>
@@ -16,10 +16,10 @@
                   </small>
                  } @else if(doc.id == 329) {
                   <p class="dscription">
-                    (<a href="assets/docs/carta-arl.docx" download>Descargar formato</a>)
+                    (<a [href]="apiUrlFront + 'public/carta-arl.docx'" download>Descargar formato</a>)
                   </p>
-                 }  
-                  
+                 }
+
                   <app-filebox [formControlName]="'document_' + doc.id"></app-filebox>
                 }
             </div>
