--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -15,6 +15,7 @@
   }
   <app-declaracion-sagrilaft />
   <app-acuerdo-confidencialidad
+  [list]="lists"
     [form]="juridicaForm"
   />
   <app-informacion-financiera [form]="juridicaForm" />
