--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -11,7 +11,7 @@
     <app-declaracion-pep />
   }
   <app-declaracion-sagrilaft />
-  <app-acuerdo-confidencialidad [form]="naturalForm"/>
+  <app-acuerdo-confidencialidad [form]="naturalForm" [list]="lists"/>
   <app-autorizacion-datos-personales />
   <app-firma [form]="naturalForm" />
   <div class="row">
