--- a/src/app/components/molecules/datos-contables-fiscales/datos-contables-fiscales.component.html
+++ b/src/app/components/molecules/datos-contables-fiscales/datos-contables-fiscales.component.html
@@ -4,6 +4,7 @@
     [label]="'Correo Electrónico de contador o persona a cargo de temas contables(si aplica) y si es diferente al del contratista'"
     [control]="getControl('accounting_responsible_email')"
     class="col-10"
+    [type]="'email'"
   />
   <app-checkbox-input
     [label]="'¿Es declarante de Impuestos de Renta?'"
