--- a/src/app/components/molecules/datos-contacto-comercial/datos-contacto-comercial.component.html
+++ b/src/app/components/molecules/datos-contacto-comercial/datos-contacto-comercial.component.html
@@ -9,11 +9,13 @@
     [label]="'Celular'"
     [control]="getControl('commercial_responsible_telephone')"
     class="col-4"
+    [pattern]="'^[0-9+-]+$'"
   />
   <app-text-input
     [label]="'Correo electrónico'"
     [control]="getControl('commercial_responsible_email')"
     class="col-4"
+    [type]="'email'"
   />
   <p class="col-12">
     El abajo firmante actuando como representante legal indicado en la firma (EL TITULAR) por medio del presente documento, manifiesto que autorizo a CMO INTERNACIONAL S.A.S., CMO PRODUCCIONES SAS y a CMO STUDIOS SAS. (en adelante, “CMO”). Y declara que comprende y acepta lo siguiente:
