--- a/src/app/components/molecules/informacion-financiera/informacion-financiera.component.html
+++ b/src/app/components/molecules/informacion-financiera/informacion-financiera.component.html
@@ -7,26 +7,31 @@
     [label]="'Valor de los Activos'"
     [control]="getControl('last_close_assets')"
     class="col-4" 
+    [type]="'currency'"
   />
   <app-text-input 
     [label]="'Valor de los pasivos'"
     [control]="getControl('last_close_liabilities')" 
     class="col-4"
+    [type]="'currency'"
   />
   <app-text-input 
     [label]="'Valor de patrimonio'"
     [control]="getControl('last_close_equity')" 
-    class="col-4" 
+    class="col-4"
+    [type]="'currency'"
   />
   <app-text-input 
     [label]="'Ingresos'"
     [control]="getControl('last_close_income')" 
-    class="col-4" 
+    class="col-4"
+    [type]="'currency'"
   />
   <app-text-input 
     [label]="'Egresos'"
     [control]="getControl('last_close_expense')" 
-    class="col-4" 
+    class="col-4"
+    [type]="'currency'"
   />
 </div>
 <div class="row">
@@ -36,26 +41,31 @@
   <app-text-input 
     [label]="'Valor de los Activos'" 
     [control]="getControl('last_year_assets')"
-    class="col-4" 
+    class="col-4"
+    [type]="'currency'"
   />
   <app-text-input 
     [label]="'Valor de los pasivos'"
     [control]="getControl('last_year_liabilities')" 
-    class="col-4" 
+    class="col-4"
+    [type]="'currency'"
   />
   <app-text-input  
     [label]="'Valor de patrimonio'"
     [control]="getControl('last_year_equity')" 
-    class="col-4" 
+    class="col-4"
+    [type]="'currency'"
   />
   <app-text-input 
     [label]="'Ingresos'"
     [control]="getControl('last_year_income')"
-    class="col-4" 
+    class="col-4"
+    [type]="'currency'"
   />
   <app-text-input 
     [label]="'Egresos'"
     [control]="getControl('last_year_expenses')" 
     class="col-4"
+    [type]="'currency'"
   />
 </div>
