--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -8,12 +8,13 @@
   <app-datos-contacto-emergencia [form]="naturalForm"/>
   <app-personas-expuestas-politicamente [form]="naturalForm"/>
   @if(naturalForm.get('is_pep')?.value == '1'){
-    <app-declaracion-pep />
+    <app-declaracion-pep [lists]="lists" />
   }
   <app-declaracion-sagrilaft />
-  <app-acuerdo-confidencialidad [form]="naturalForm" [list]="lists"/>
+  <app-acuerdo-confidencialidad [form]="naturalForm" [lists]="lists"/>
   <app-autorizacion-datos-personales />
   <app-firma [form]="naturalForm" />
+  <app-additional-info [lists]="lists" />
   <div class="row">
     <app-black-button
         [name]="'enviar formulario'"
