--- a/src/app/components/atoms/filebox/filebox.component.html
+++ b/src/app/components/atoms/filebox/filebox.component.html
@@ -1,5 +1,7 @@
 @if (!value) {
-  <small class="error">{{ getErrors() && getErrors()}}</small>
+  @if (getErrors()) {
+    <small class="error">{{ getErrors()}}</small>
+  }
   <label
       class="content-file-input"
       appDragAndDropFile
@@ -8,16 +10,16 @@
       >
     <span>Arrastar y soltar o <a>buscar</a></span>
     @if (!onlyPdf) {
-      <input  
-        type="file" 
-        accept=".pdf, .jpeg, .png, .jpg" 
+      <input
+        type="file"
+        accept=".pdf, .jpeg, .png, .jpg"
         (change)="onFileChange($event)"
       >
     } @else {
-      <input  
-        type="file" 
-        accept=".pdf" 
-        (change)="onFileChange($event)" 
+      <input
+        type="file"
+        accept=".pdf"
+        (change)="onFileChange($event)"
       >
     }
   </label>
