--- a/src/app/components/molecules/datos-contabilidad/datos-contabilidad.component.html
+++ b/src/app/components/molecules/datos-contabilidad/datos-contabilidad.component.html
@@ -9,11 +9,13 @@
     [label]="'Celular'"
     [control]="getControl('accounting_responsible_telephone')"
     class="col-4"
+    [pattern]="'^[0-9+-]+$'"
   />
   <app-text-input
     [label]="'Correo electrónico'"
     [control]="getControl('accounting_responsible_email')"
     class="col-4"
+    [type]="'email'"
   />
   <app-text-input
     [label]="'Cargo'"
