--- a/src/app/components/molecules/datos-contacto-emergencia/datos-contacto-emergencia.component.html
+++ b/src/app/components/molecules/datos-contacto-emergencia/datos-contacto-emergencia.component.html
@@ -8,7 +8,7 @@
   <app-text-input 
     [label]="'Teléfono de contacto'"
     [control]="getControl('emergency_contact_telephone')"
-    [type]="'number'" 
+    [pattern]="'^[0-9+-]+$'"
     class="col-4"></app-text-input>
   <app-text-input 
     [label]="'Parentesco'"
