--- a/src/app/components/molecules/datos-empresa/datos-empresa.component.html
+++ b/src/app/components/molecules/datos-empresa/datos-empresa.component.html
@@ -24,10 +24,12 @@
     [label]="'Teléfonos de contacto'"
     class="col-4"
     [control]="getControl('telephone')"
+    [pattern]="'^[0-9+-]+$'"
   />
   <app-text-input
     [label]="'Correo electrónico'"
     class="col-4"
     [control]="getControl('email')"
+    [type]="'email'"
   />
 </div>
