--- a/src/app/components/molecules/datos-factura-electronica/datos-factura-electronica.component.html
+++ b/src/app/components/molecules/datos-factura-electronica/datos-factura-electronica.component.html
@@ -9,11 +9,13 @@
     [label]="'Celular'"
     [control]="getControl('electronic_billing_telephone')"
     class="col-4"
+    [pattern]="'^[0-9+-]+$'"
 
   />
   <app-text-input
     [label]="'Correo electrónico'"
     [control]="getControl('electronic_billing_email')"
     class="col-4"
+    [type]="'email'"
   />
 </div>
