--- a/src/app/components/molecules/declaracion-pep/declaracion-pep.component.html
+++ b/src/app/components/molecules/declaracion-pep/declaracion-pep.component.html
@@ -54,10 +54,10 @@
     Las personas descritas anteriormente son PEP durante el periodo en que ocupen sus cargos y durante los dos (2) años siguientes a su dejación, renuncia, despido o declaración de insubsistencia del nombramiento, o de cualquier otra forma de desvinculación.
   </p>
   <p>
-    En virtud de la definición de PEP recogida anteriormente, declaro que reúno las condiciones para ser considerado de tal manera, ya que por el término de ________ contados a partir de la fecha ______ hasta la fecha _______, tuve el cargo de _____.
+    En virtud de la definición de PEP recogida anteriormente, declaro que reúno las condiciones para ser considerado de tal manera, ya que por el término de <b style="text-transform: uppercase;">{{lists?.vendorInfo?.pep_term || '________'}}</b> contados a partir de la fecha <b style="text-transform: uppercase;">{{lists?.vendorInfo?.pep_start_date ? (lists?.vendorInfo?.pep_start_date | date) : '________'}}</b> hasta la fecha <b style="text-transform: uppercase;">{{lists?.vendorInfo?.pep_end_date ? (lists?.vendorInfo?.pep_end_date | date) : '________'}}</b>, tuve el cargo de <b style="text-transform: uppercase;">{{lists?.vendorInfo?.pep_position || '________'}}</b>.
   </p>
   <p>
-    Manifiesto que CMO respeta las garantías del Habeas Datas y que mi calidad de PEP no se interpone en contra de las garantías consagradas en las leyes de Protección de Datos y Hábeas Data. 
+    Manifiesto que CMO respeta las garantías del Habeas Datas y que mi calidad de PEP no se interpone en contra de las garantías consagradas en las leyes de Protección de Datos y Hábeas Data.
   </p>
 
   <p>
