--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -1,13 +1,13 @@
 <app-panel-buttons (saveForm)="saveForm()"/>
 <form [formGroup]="juridicaForm" (ngSubmit)="sendForm()">
-  <app-initial-data [form]="juridicaForm" />    
+  <app-initial-data [form]="juridicaForm" />
   <app-datos-empresa [form]="juridicaForm" />
   <app-datos-representante-legal [form]="juridicaForm" />
   <app-datos-factura-electronica [form]="juridicaForm" />
   <app-datos-contabilidad [form]="juridicaForm" />
   <app-datos-fiscales [form]="juridicaForm" [lists]="lists" />
   <app-datos-tesoreria [form]="juridicaForm" />
-  <app-datos-contacto-comercial [form]="juridicaForm" /> 
+  <app-datos-contacto-comercial [form]="juridicaForm" />
   <app-autorizacion-datos-personales />
   <app-personas-expuestas-politicamente [form]="juridicaForm" />
   @if(juridicaForm.get('is_pep')?.value == '1'){
@@ -15,7 +15,7 @@
   }
   <app-declaracion-sagrilaft />
   <app-acuerdo-confidencialidad
-  [list]="lists"
+  [lists]="lists"
     [form]="juridicaForm"
   />
   <app-informacion-financiera [form]="juridicaForm" />
