--- a/src/app/components/molecules/datos-fiscales/datos-fiscales.component.html
+++ b/src/app/components/molecules/datos-fiscales/datos-fiscales.component.html
@@ -1,7 +1,7 @@
 <app-subtitle [subtitle]="'datos fiscales'" />
 <div class="row">
   <app-select-input
-    [label]="'Código Actividad Económica (CIIU)'"
+    [label]="'Código Actividad Económica CIIU (por favor tome el código que aparece en el rut)'"
     [options]="lists?.economicActivities"
     [optionName]="'ciiu'"
     [optionValue]="'id'"
