--- a/src/app/components/molecules/datos-contratista/datos-contratista.component.html
+++ b/src/app/components/molecules/datos-contratista/datos-contratista.component.html
@@ -17,7 +17,7 @@
   <app-text-input
     [label]="'Número de documento'"
     [control]="getControl('document')"
-    [type]="'number'"
+    [type]="'text'"
     class="col-7"
     [description]="'Escriba el documento con el que este registrado en la cuenta bancaria que registro para el pago'"
   />
@@ -29,7 +29,7 @@
     />
   }
   <app-select-input
-    [label]="'Código Actividad Económica (CIIU)'"
+    [label]="'Código Actividad Económica CIIU (por favor tome el código que aparece en el rut)'"
     [options]="lists?.economicActivities"
     [optionName]="'ciiu'"
     [optionValue]="'id'"
