--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -11,7 +11,7 @@
   <app-autorizacion-datos-personales />
   <app-personas-expuestas-politicamente [form]="juridicaForm" />
   @if(juridicaForm.get('is_pep')?.value == '1'){
-    <app-declaracion-pep />
+    <app-declaracion-pep [lists]="lists"  />
   }
   <app-declaracion-sagrilaft />
   <app-acuerdo-confidencialidad
