Adjust input currency

--- a/src/app/components/atoms/text-input/text-input.component.html
+++ b/src/app/components/atoms/text-input/text-input.component.html
@@ -19,7 +19,7 @@
       mask="separator"
       prefix="$"
       [allowNegativeNumbers]="true"
-      thousandSeparator=","
+      thousandSeparator="."
     />
   } @else {
     <input
