--- a/src/app/components/atoms/text-input/text-input.component.html
+++ b/src/app/components/atoms/text-input/text-input.component.html
@@ -16,7 +16,7 @@
       [placeholder]="placeholder"
       [formControl]="control"
       type="text"
-      mask="separator"
+      mask="separator.0"
       prefix="$"
       [allowNegativeNumbers]="true"
       thousandSeparator="."
