--- a/src/app/components/molecules/firma/firma.component.html
+++ b/src/app/components/molecules/firma/firma.component.html
@@ -14,5 +14,6 @@
   <app-filebox 
     [control]="getControl('signature')"
     class="col-12"
+    [allowedExtensions]="['png', 'PNG', 'jpg', 'JPG', 'jpeg', 'JPEG']"
   />
 </div>
