--- a/src/app/components/atoms/filebox/filebox.component.html
+++ b/src/app/components/atoms/filebox/filebox.component.html
@@ -5,23 +5,14 @@
   <label
       class="content-file-input"
       appDragAndDropFile
-      [extensiones_permitidas]="onlyPdf ? ['pdf'] : ['pdf', 'PDF', 'jpeg', 'jpg', 'png']"
+      [extensiones_permitidas]="allowedExtensions"
       (onChangeFile)="onDragFileChange($event)"
       >
     <span>Arrastar y soltar o <a>buscar</a></span>
-    @if (!onlyPdf) {
-      <input
-        type="file"
-        accept=".pdf, .jpeg, .png, .jpg"
-        (change)="onFileChange($event)"
-      >
-    } @else {
-      <input
-        type="file"
-        accept=".pdf"
-        (change)="onFileChange($event)"
-      >
-    }
+    <input
+      type="file"
+      [accept]="acceptAllowedExtensions"
+      (change)="onFileChange($event)" />
   </label>
 } @else {
   <div class="content-file-filled">
