--- a/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
+++ b/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
@@ -21,6 +21,7 @@
   <app-filebox 
     [control]="getControl('signature')"
     class="col-12"
+    [allowedExtensions]="['png', 'PNG', 'jpg', 'JPG', 'jpeg', 'JPEG']"
   />
   <app-text-input
     [label]="'Por favor, adjunte el link del CV de la persona prestadora del servicio'"
